cmake_minimum_required(VERSION 3.9)
project(final)

set(CMAKE_CXX_STANDARD 11)

add_executable(final
        apps/bench.cpp
        apps/bench.h
        apps/bench_recs.cpp
        apps/bounce.cpp
        apps/draw.cpp
        apps/draw_cubic.cpp
        apps/draw_oval.cpp
        apps/draw_path.cpp
        apps/draw_quad.cpp
        apps/GProxyCanvas.h
        apps/GRandom.h
        apps/GTime.cpp
        apps/GWindow.cpp
        apps/GWindow.h
        apps/image.cpp
        apps/image.h
        apps/image_final.cpp
        apps/image_pa1.cpp
        apps/image_pa2.cpp
        apps/image_pa3.cpp
        apps/image_pa4.cpp
        apps/image_pa5.cpp
        apps/image_pa6.cpp
        apps/image_recs.cpp
        apps/paint.cpp
        apps/tests.cpp
        apps/tests.h
        apps/tests_pa4.cpp
        apps/tests_pa5.cpp
        apps/tests_pa6.cpp
        apps/tests_recs.cpp
        apps/viewer.cpp
        include/GBitmap.h
        include/GBlendMode.h
        include/GCanvas.h
        include/GColor.h
        include/GFilter.h
        include/GMath.h
        include/GMatrix.h
        include/GPaint.h
        include/GPath.h
        include/GPixel.h
        include/GPoint.h
        include/GRect.h
        include/GShader.h
        include/GTime.h
        include/GTypes.h
        src/GBitmap.cpp
        src/GFinalBaseCanvas.cpp
        src/GPath.cpp
        BitmapShader.cpp
        Blend.cpp
        Blend.h
        Clipper.cpp
        Clipper.h
        ColorUtils.h
        GBlendModeFilter.cpp
        GBlitter.cpp
        GBlitter.h
        GCanvas.cpp
        GLayer.cpp
        GLayer.h
        GLinearGradient.cpp
        GMatrix.cpp
        GPath.cpp
        GScanConverter.cpp
        GScanConverter.h
        MathUtils.h)
